--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.js": {
-      "memory": 128,
-      "maxDuration": 10
-    }
-  },
-  "rewrites": [
-    { "source": "/", "destination": "/api/index.js" }
+  "routes": [
+    { "src": "/(.*)", "dest": "/api/index.js" }
   ]
 }
