--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "spotify-api-gold",
+  "name": "spotify-api-proxy",
   "version": "1.0.0",
+  "private": true,
   "main": "api/index.js",
-  "type": "module",
+  "scripts": {
+    "start": "node api/index.js"
+  },
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "axios": "^1.4.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
